[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['substrate-thresholdsig-runtime/std']
[dependencies.substrate-thresholdsig-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-thresholdsig-runtime-wasm'
version = '1.0.0'
