[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-thresholdsig-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-thresholdsig-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-thresholdsig-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
